--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -491,8 +491,7 @@ figcaption{
 .post__feat-img{
   height: 500px;
   background-size:cover!important;
-  background-attachment: fixed!important;
-  background-position:center center!important;
+  background-position:center top!important;
   margin-bottom: 4rem;
 }
 .post__bandcamp-player{
@@ -545,7 +544,7 @@ figcaption{
 
 /* FOOTER
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-footer{
+footer.foot{
   margin-top: 6rem;
   padding-bottom: 3rem;
   min-height: 300px;
@@ -643,3 +642,15 @@ footer{
   clear: both; }
 
   // THIS IS A WEE TEST init
+
+
+  .covers{
+    &:nth-child(3n+4){
+    margin-left: 0;
+
+    }
+  }
+
+  .orange{
+    background-color:orange;
+  }
