--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -99,6 +99,11 @@ color: $color__black;
 background:none;
 }
 }
+
+.button-read-more-cat{
+max-width: 170px;
+margin-left: 0.5rem!important;
+}
 /* Sweep To Right */
 .hvr-sweep-to-right {
   display: inline-block;
