changed homepage, almost ready for staging

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -6,9 +6,10 @@ $bp-larger-than-desktop   : "min-width: 1000px";
 $bp-larger-than-desktophd : "min-width: 1200px";
 
 // UNIVERSAL COLORS
-$color__background:rgba(255, 254, 243, 1);
+$color__background:rgba(255, 254, 249, 1);
 $color__black:rgba(35, 31, 32, 1);
 $color__black--80:rgba(35, 31, 32, 0.8);
+$color__black--60:rgba(35, 31, 32, 0.3);
 $color__railred:rgba(207, 74, 55, 1);
 $color__railred--dark:rgba(134, 18, 3, 1);
 $color__railblue:rgba(11,69,89,1);
