--- a/css/screen.css
+++ b/css/screen.css
@@ -155,7 +155,7 @@ h6 {
     font-size: 5.0rem; }
 
   h2 {
-    font-size: 2.5rem; }
+    font-size: 2.2rem; }
 
   h3 {
     font-size: 3.6rem; }
@@ -176,24 +176,22 @@ p {
   letter-spacing: 0.03rem; }
   @media (min-width: 320px) {
     p {
-      font-size: 1.65rem; } }
+      font-size: 1.45rem; } }
   @media (min-width: 550px) {
     p {
       font-size: 1.55rem; } }
   @media (min-width: 1000px) {
     p {
-      font-size: 1.65rem; } }
+      font-size: 1.45rem; } }
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  color: #cf4a37;
+  -webkit-transition: all 0.5s;
+  transition: all 0.5s;
   cursor: pointer;
   text-decoration: none; }
-  a:hover {
-    color: #4fbfe3; }
 
 :focus {
   background-color: transparent;
@@ -209,17 +207,16 @@ a {
     text-align: left; } }
 h2.underline > a {
   position: relative;
+  font-size: 1.5rem;
   left: 0;
-  color: #231f20;
+  color: #fffef3;
   text-decoration: none;
-  padding-bottom: 1.75rem;
-  display: block;
-  margin-bottom: 3.75rem; }
+  display: block; }
   h2.underline > a:before {
     content: "";
     position: absolute;
     width: 100%;
-    height: 1px;
+    height: 0px;
     bottom: 0;
     right: 0;
     background-color: #000;
@@ -410,7 +407,7 @@ h2.underline > a {
   position: absolute;
   top: 35px;
   margin-bottom: 30px;
-  color: #fffef3;
+  color: #fffef9;
   text-align: center;
   cursor: pointer;
   -webkit-transition: all 0.3s;
@@ -440,14 +437,16 @@ h2.underline > a {
   top: 0;
   z-index: 9999;
   background: #231f20;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
   font-weight: bold;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
   /* enables momentum scrolling in iOS overflow elements */ }
   .pushy a {
     display: block;
-    color: #fffef3;
+    font-family: "Lato", sans-serif;
+    font-weight: 600;
+    color: #fffef9;
     padding: 15px 40px;
     box-sizing: border-box;
     text-decoration: none; }
@@ -567,7 +566,7 @@ input[type="button"] {
   text-transform: uppercase;
   text-decoration: none;
   white-space: nowrap;
-  background-color: #fffef3;
+  background-color: #fffef9;
   border: 1px solid #231f20;
   cursor: pointer;
   box-sizing: border-box;
@@ -584,7 +583,7 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-  color: #fffef3;
+  color: #fffef9;
   background: #231f20;
   outline: 0; }
 
@@ -608,7 +607,7 @@ input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
   color: #FFF;
-  background-color: #1EAEDB;
+  background-color: #fffef9;
   border-color: #1EAEDB; }
 
 .button-white {
@@ -636,7 +635,8 @@ input[type="button"].button-primary:focus {
 
 .button-read-more-feat {
   float: none;
-  margin: 0 auto; }
+  margin: 0 auto;
+  background: #fffef9; }
 
 .button-infinite {
   text-align: left;
@@ -656,6 +656,13 @@ input[type="button"].button-primary:focus {
 .button-read-more-cat {
   max-width: 170px;
   margin-left: 0.5rem !important; }
+
+.button__edit {
+  background: black;
+  padding: 1rem 2rem;
+  display: inline-block; }
+  .button__edit a {
+    color: #fff; }
 
 /* Sweep To Right */
 .hvr-sweep-to-right {
@@ -776,15 +783,15 @@ label > .label-body {
 .mail-form {
   box-sizing: border-box; }
   .mail-form ::-webkit-input-placeholder {
-    color: #fffef3; }
+    color: #fffef9; }
   .mail-form :-moz-placeholder {
     /* Firefox 18- */
-    color: #fffef3; }
+    color: #fffef9; }
   .mail-form ::-moz-placeholder {
     /* Firefox 19+ */
-    color: #fffef3; }
+    color: #fffef9; }
   .mail-form :-ms-input-placeholder {
-    color: #fffef3; }
+    color: #fffef9; }
 
 .alignleft {
   float: left;
@@ -806,7 +813,7 @@ body {
   line-height: 1.6;
   font-family: "Lato", sans-serif;
   color: #231f20;
-  background: #fffef3;
+  background: #fffef9;
   margin: 0;
   padding: 0; }
 
@@ -833,7 +840,9 @@ ol ul {
   font-size: 90%; }
 
 li {
-  margin-bottom: 1rem; }
+  margin-bottom: 0.75rem;
+  font-family: "Merriweather", serif;
+  font-weight: 200; }
 
 /* CODE
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -971,9 +980,10 @@ header {
         max-width: 400px; } }
 
 header.smaller {
-  height: 0.1rem; }
+  height: 0rem;
+  margin-top: -20px; }
   header.smaller .logo {
-    max-width: 1%;
+    max-width: 0%;
     opacity: 0;
     position: relative;
     top: 0rem; }
@@ -986,8 +996,7 @@ header.smaller {
 /* COLOR WRAPS
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .color-wrap {
-  padding-top: 3.75rem;
-  margin-bottom: 3.75rem; }
+  padding-top: 3.75rem; }
 
 .color-wrap--coral {
   float: left;
@@ -1011,10 +1020,32 @@ header.smaller {
     .color-wrap--yellow {
       padding-bottom: 3rem; } }
 
+.color-wrap--railblue {
+  float: left;
+  width: 100%;
+  background-color: #0b4559; }
+  @media (min-width: 320px) {
+    .color-wrap--railblue {
+      padding-bottom: 0rem; } }
+  @media (min-width: 750px) {
+    .color-wrap--railblue {
+      padding-bottom: 3rem; } }
+
+.color-wrap--railred {
+  float: left;
+  width: 100%;
+  background-color: #cf4a37; }
+  @media (min-width: 320px) {
+    .color-wrap--railred {
+      padding-bottom: 0rem; } }
+  @media (min-width: 750px) {
+    .color-wrap--railred {
+      padding-bottom: 3rem; } }
+
 /* PODCASTS & RELEASES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .cover-list {
-  margin-bottom: 3rem;
+  margin: 0;
   display: block; }
   .cover-list figure {
     margin: 0rem;
@@ -1189,7 +1220,7 @@ ul.release-covers {
   float: left;
   display: block;
   width: 50%;
-  background-color: #fffef3;
+  background-color: #fffef9;
   position: relative; }
   @media (min-width: 320px) {
     .post__large--feat {
@@ -1212,7 +1243,7 @@ ul.release-covers {
     padding: 6rem 3rem; } }
 @media (min-width: 1000px) {
   .post__large--excerpt {
-    padding: 0 8rem;
+    padding: 0 10rem;
     position: relative;
     top: 55%;
     transform: translateY(-50%); } }
@@ -1221,7 +1252,9 @@ ul.release-covers {
   background-size: cover !important;
   background-position: center center !important;
   repeat: no-repeat;
-  overflow: hidden; }
+  overflow: hidden;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s; }
   .post__large--feat-img .transparent-link {
     display: block; }
     @media (min-width: 320px) {
@@ -1235,11 +1268,8 @@ ul.release-covers {
         width: 100%;
         height: 100%; } }
   .post__large--feat-img:hover {
-    -webkit-animation: zoomBackground 1s ease 1;
-    -moz-animation: zoomBackground 1s ease 1;
-    animation: zoomBackground 1s ease 1;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both; }
+    -webkit-filter: brightness(55%);
+    filter: brightness(55%); }
 
 @media (min-width: 320px) {
   .post__excerpt {
@@ -1300,8 +1330,14 @@ ul.release-covers {
     @media (min-width: 1000px) {
       .post h2 {
         text-align: left; } }
-  .post p:first-child:first-letter {
-    color: #cf4a37; }
+  .post h3, .post h5 {
+    font-size: 1.95rem;
+    letter-spacing: 0.002rem; }
+  .post a {
+    border-bottom: 1px solid #cf4a37; }
+    .post a:hover {
+      color: #231f20;
+      border-bottom: 1px solid #231f20; }
 
 .post__feat-img {
   height: 500px;
@@ -1315,10 +1351,25 @@ ul.release-covers {
   height: 120px;
   margin-bottom: 2rem; }
 
+.post__tags {
+  font-size: 1.2rem;
+  font-weight: 400;
+  font-family: "Lato", sans-serif;
+  padding-bottom: 1.8rem; }
+  .post__tags a {
+    color: rgba(35, 31, 32, 0.8);
+    border-bottom: 1px solid #fffef9;
+    white-space: nowrap; }
+    .post__tags a:hover {
+      color: #cf4a37;
+      border-bottom: 1px solid #cf4a37; }
+
 .social-shares li {
   width: 40px;
   display: inline-block;
   margin-right: 1rem; }
+  .social-shares li a, .social-shares li a:hover {
+    border: none; }
 
 /* Icons
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -1345,11 +1396,10 @@ ul.release-covers {
 /* FOOTER
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 footer.foot {
-  margin-top: 6rem;
   padding-bottom: 3rem;
-  min-height: 300px;
+  min-height: 200px;
   text-align: center;
-  background: #0b4559;
+  background: #231f20;
   color: #fff;
   float: left;
   width: 100%; }
@@ -1385,7 +1435,7 @@ footer.foot {
       font-family: "Merriweather", serif;
       box-sizing: border-box; }
       footer.foot ul li a {
-        color: #fffef3;
+        color: #fffef9;
         text-decoration: none;
         list-style: none; }
 
@@ -1438,10 +1488,14 @@ footer.foot {
   clear: both; }
 
 .covers h2 {
-  font-size: 2rem;
+  font-size: 1.8rem;
   display: block;
   max-height: 25px;
   overflow: hidden; }
+  .covers h2 a {
+    color: #231f20; }
+    .covers h2 a:hover {
+      color: #cf4a37; }
 .covers p {
   display: block;
   max-height: 80px;
@@ -1449,9 +1503,6 @@ footer.foot {
 .covers img {
   -webkit-transition: all 0.3s;
   transition: all 0.3s; }
-  .covers img:hover {
-    -webkit-filter: brightness(55%);
-    filter: brightness(55%); }
 .covers:nth-child(3n+4) {
   margin-left: 0; }
 
