--- a/scss/modules/_typography.scss
+++ b/scss/modules/_typography.scss
@@ -20,7 +20,7 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 /* Larger than phablet */
 @media (min-width: 550px) {
   h1 { font-size: 5.0rem; }
-  h2 { font-size: 2.5rem; }
+  h2 { font-size: 2.2rem; }
   h3 { font-size: 3.6rem; }
   h4 { font-size: 3.0rem; }
   h5 { font-size: 2.4rem; }
@@ -33,21 +33,21 @@ p {
     font-family: $font__serif;
     font-weight: 300;
     letter-spacing: 0.03rem;
-    @media (#{$bp-larger-than-mobile}) {font-size: 1.65rem;}
+    @media (#{$bp-larger-than-mobile}) {font-size: 1.45rem;}
     @media (#{$bp-larger-than-phablet}) {font-size: 1.55rem;}
-    @media (#{$bp-larger-than-desktop}) {font-size: 1.65rem;}
+    @media (#{$bp-larger-than-desktop}) {font-size: 1.45rem;}
 }
 
 
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB;
-  @include fade(0.3s);
+  color:$color__railred;
+  @include fade(0.5s);
   cursor: pointer;
   text-decoration: none;
     &:hover {
-    color: #4fbfe3; }
+  }
 }
 :focus{
   background-color: transparent;
@@ -65,18 +65,17 @@ h2.underline{
   }
   > a{ 
     position: relative;
+    font-size: 1.5rem;
     left: 0;
-    color: #231f20;
+    color:#fffef3;
     text-decoration: none;
-    padding-bottom: 1.75rem;
     display: block;
-    margin-bottom: 3.75rem;
     &:hover{}
     &:before{
       content: "";
       position:absolute;
       width:100%;
-      height:1px;
+      height:0px;
       bottom:0;
       right:0;
       background-color: #000;
