--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -496,11 +496,15 @@ figcaption{
   -webkit-transform: translateX(-50%);
   position: relative;
   left: 50%;
+  .container{
+    padding:0 1rem;
+  }
   h2{
     @media (#{$bp-larger-than-mobile}) {text-align: center; border-bottom:solid 1px $color__black; padding-bottom:2.5rem;}
     @media (#{$bp-larger-than-desktop}) {text-align:left;}
     margin-bottom: 3rem;
   }
+
   h3,h5{
     font-size: 1.95rem;
     letter-spacing: 0.002rem;
@@ -524,7 +528,9 @@ figcaption{
   width: 100%; 
   height: 120px;
   margin-bottom: 2rem;
+
 }
+
 
 .post__tags{
   font-size: 1.2rem;
@@ -701,10 +707,22 @@ footer.foot{
         }
       }
     }
+    a{
+        color: $color__black;
+        padding-bottom: 3.5rem;
+        &:hover{
+        color: $color__railred;
+        }      
+      }
+    h2.releases{
+      margin-bottom: 0rem;
+      padding-bottom:0.25rem;
+    }
     p{
       display: block;
       max-height: 80px;
       overflow: hidden;
+      padding-top:0.7rem;
     }
     img{
       @include fade(0.3s);
