taken css hide off, need to find a way to universally limit character length without responsive issues, currently set to 130 characters

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -719,9 +719,8 @@ footer.foot{
       padding-bottom:0.25rem;
     }
     p{
-      display: block;
-      max-height: 80px;
-      overflow: hidden;
+      // display: block;
+      // overflow: hidden;
       padding-top:0.7rem;
     }
     img{
