--- a/scss/modules/_typography.scss
+++ b/scss/modules/_typography.scss
@@ -1,6 +1,8 @@
 // global fonts
 $font__sans-serif:"Lato",sans-serif;
 $font__serif:"Merriweather", serif;
+$font__title:"Open Sans", sans-serif;
+
 
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
