--- a/css/screen.css
+++ b/css/screen.css
@@ -111,6 +111,35 @@ table {
     -ms-transform: scale(1.1, 1.1);
     -o-transform: scale(1.1, 1.1);
     transform: scale(1.1, 1.1); } }
+@keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 /* Typography
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 h1, h2, h3, h4, h5, h6 {
@@ -456,9 +485,10 @@ h2.underline > a {
     text-decoration: none; }
     .pushy a:hover {
       background: #cf4a37;
-      color: #FFF; }
+      color: #FFF;
+      padding-left: 3.8rem; }
   .pushy ul {
-    margin-top: 5rem; }
+    margin-top: 4rem; }
 
 /* Menu Movement */
 .pushy-left {
@@ -539,7 +569,8 @@ h2.underline > a {
       padding: 0; }
       .social-sidebar li a:hover {
         background-color: none;
-        background: none; }
+        background: none;
+        padding-left: 0; }
     .social-sidebar li img {
       width: 42px;
       margin: 0 0.5rem;
@@ -974,7 +1005,17 @@ header {
     margin-top: 0.3rem;
     left: -1rem;
     -webkit-transition: all 0.3s;
-    transition: all 0.3s; }
+    transition: all 0.3s;
+    -webkit-animation: fadein 1s 1 0.55s forwards;
+    /* Safari, Chrome and Opera > 12.1 */
+    -moz-animation: fadein 1s 1 0.55s forwards;
+    /* Firefox < 16 */
+    -ms-animation: fadein 1s 1 0.55s forwards;
+    /* Internet Explorer */
+    -o-animation: fadein 1s 1 0.55s forwards;
+    /* Opera < 12.1 */
+    animation: fadein 1s 1 0.55s forwards;
+    opacity: 0; }
     @media (min-width: 320px) {
       header .logo {
         max-width: 40px; } }
@@ -1435,8 +1476,10 @@ footer.foot {
     font-weight: 600;
     margin-bottom: 2rem; }
   footer.foot .container {
-    padding-top: 5rem;
-    padding-left: 8rem; }
+    padding-top: 5rem; }
+    @media (min-width: 750px) {
+      footer.foot .container {
+        padding-left: 8rem; } }
   footer.foot ul {
     box-sizing: border-box; }
     footer.foot ul li {
@@ -1537,6 +1580,12 @@ footer.foot {
 
 .orange {
   background-color: orange; }
+
+.scrolltop {
+  position: fixed;
+  bottom: 3rem;
+  right: 2rem;
+  background: green; }
 
 
 
