changes to sidebar, responsive fixes, added scrollto

--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -760,7 +760,8 @@ footer.foot{
 
   .scrolltop{
     position:fixed;
-    bottom:3rem;
-    right: 2rem;
-    background:green;
+    bottom:8rem;
+    right: 4rem;
+    width: 50px;
+    text-align: center;
   }
