--- a/css/screen.css
+++ b/css/screen.css
@@ -1583,9 +1583,10 @@ footer.foot {
 
 .scrolltop {
   position: fixed;
-  bottom: 3rem;
-  right: 2rem;
-  background: green; }
+  bottom: 8rem;
+  right: 4rem;
+  width: 50px;
+  text-align: center; }
 
 
 
