--- a/style.css
+++ b/style.css
@@ -7,4 +7,4 @@ Description: Version 2 of Record Label site for Cambrian line
 Version: 2.0
 
 */
-@import url("css/screen.css") screen;
+@import url("css/main.min.css") screen;
