--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -10,8 +10,8 @@ input[type="button"] {
   padding: 0 30px;
   color: $color__black;
   text-align: center;
-  font-size: 11px;
-  font-weight: 600;
+  font-size: 11px!important;
+  font-weight:600!important;
   line-height: 38px;
   letter-spacing: .1rem;
   font: $font__sans-serif;
