--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,4 +1,3 @@
-
 /* Utilities
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .u-full-width {
@@ -403,16 +402,22 @@ figcaption{
 /* POST PAGE
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .post{
-  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  position: relative;
-  left: 50%;
+  @media (#{$bp-larger-than-mobile}) {
+    .row{
+      padding: 0 1rem;
+    }
+  }
+  @media (#{$bp-larger-than-tablet}) {
+  .row{
+      padding: 0rem;
+    }
+    margin-bottom: 4rem;
+  }
   .container{
-    padding:0 1rem;
   }
   h2{
-    @media (#{$bp-larger-than-mobile}) {text-align: center; border-bottom:solid 1px $color__black; padding-bottom:2.5rem;}
-    @media (#{$bp-larger-than-desktop}) {text-align:left;}
+    @media (#{$bp-larger-than-mobile}) {text-align: center; padding-bottom:1.5rem;}
+    @media (#{$bp-larger-than-tablet}) {text-align:left;}
     margin-bottom: 3rem;
   }
 
@@ -429,10 +434,15 @@ figcaption{
   }
 }
 .post__feat-img{
-  height: 500px;
+  margin-bottom: 4rem;
   background-size:cover!important;
   background-position:center center!important;
-  margin-bottom: 4rem;
+  @media (#{$bp-larger-than-mobile}) {
+    height: 250px;
+  }
+  @media (#{$bp-larger-than-tablet}) {
+    height: 500px;
+  }
 }
 .post__bandcamp-player{
   border:0;
@@ -574,7 +584,7 @@ footer.foot{
   }
 .mobile{
     @media (#{$bp-larger-than-mobile}) {display:block;}
-    @media (#{$bp-larger-than-phablet}) {display:none;}
+    @media (#{$bp-larger-than-desktop}) {display:none;}
 }
 
 // Scrollbar
@@ -635,8 +645,9 @@ footer.foot{
     p{
       display: block;
       overflow: hidden;
-      max-height: 95px;
       padding-top:0.7rem;
+      @media (#{$bp-larger-than-mobile}) {height: auto;}
+      @media (#{$bp-larger-than-tablet}) {height: 95px;}
     }
     img{
       @include fade(0.3s);
@@ -667,4 +678,10 @@ footer.foot{
     right: 4rem;
     width: 50px;
     text-align: center;
+  }
+
+  iframe{
+    padding: 2%;
+    width: 96%;
+    border: 1px solid $color__black;
   }
