--- a/css/main.css
+++ b/css/main.css
@@ -1245,11 +1245,15 @@ ul.release-covers {
 
 @media (min-width: 320px) {
   .post__large {
-    height: 560px;
     padding-top: 0rem;
     padding-bottom: 0rem;
     margin: 0;
-    overflow: visible; } }
+    overflow: visible; }
+    .post__large:first-child {
+      margin-top: 10rem; } }
+@media (min-width: 750px) {
+  .post__large {
+    height: 520px; } }
 @media (min-width: 1000px) {
   .post__large {
     max-height: 768px;
@@ -1257,7 +1261,9 @@ ul.release-covers {
     padding-top: 0rem;
     padding-bottom: 0rem;
     margin: 0;
-    overflow: hidden; } }
+    overflow: hidden; }
+    .post__large:first-child {
+      margin-top: 0rem; } }
 
 .post__large--feat {
   float: left;
@@ -1268,8 +1274,8 @@ ul.release-covers {
   @media (min-width: 320px) {
     .post__large--feat {
       width: 100%;
-      height: 70%; } }
-  @media (min-width: 1000px) {
+      height: 80%; } }
+  @media (min-width: 750px) {
     .post__large--feat {
       width: 50%;
       height: 100%; } }
@@ -1306,6 +1312,12 @@ ul.release-covers {
   overflow: hidden;
   -webkit-transition: all 0.3s;
   transition: all 0.3s; }
+  @media (min-width: 320px) {
+    .post__large--feat-img {
+      height: 300px; } }
+  @media (min-width: 750px) {
+    .post__large--feat-img {
+      height: 100%; } }
   .post__large--feat-img .transparent-link {
     display: block; }
     @media (min-width: 320px) {
@@ -1595,10 +1607,14 @@ footer.foot {
   .fuller {
     padding: 0%;
     padding-top: 4rem; } }
-@media (min-width: 550px) {
+@media (min-width: 320px) {
   .fuller {
     padding: 4%;
-    padding-top: 16rem; } }
+    padding-top: 7rem; } }
+@media (min-width: 750px) {
+  .fuller {
+    padding: 4%;
+    padding-top: 11rem; } }
 
 .orange {
   background-color: orange; }
